Add x-ui-array-input-validation to all array type fields (#463)
* changes in x-ui-array-input-validation

* added x-ui-array-input-validations

* added x-ui-array-input-validations

* added x-ui-array-input-validations

* added x-ui-array-input-validations

* added x-ui-array-input-validations

* fix the facets.yaml remove error block

* removed x-ui-command: true

* removed x-ui-array-input-validation

* removed x-ui-array-input-validation

* removed x-ui-array-input-validation

* added min and max

* added x-ui-command

* added x-ui-command

* added x-ui-command

* added x-ui-command

* added x-ui-command

* removed x-ui-error

* added x-ui-array-input-validations

* revertedservice files

* chore(ui): remove x-ui-array-input-validation blocks from EventBridge and CloudFront facets

* chore(ui): remove cron x-ui-error-message from DLM facets

* revert(dlm): restore facets.yaml from develop

* feat(ui): add x-ui-array-input-validation for times in DLM facets

--- a/modules/postgres/alloydb/0.2/facets.yaml
+++ b/modules/postgres/alloydb/0.2/facets.yaml
@@ -103,11 +103,12 @@ spec:
       type: array
       title: Database Names
       description: List of database names to create.
-      minLength: 1
-      maxLength: 63
-      pattern: "^[a-zA-Z][a-zA-Z0-9_]*$"
+      x-ui-array-input-validation:
+        minLength: 1
+        maxLength: 63
+        pattern: "^[a-zA-Z][a-zA-Z0-9_]*$"
+        error: "Database names must start with a letter and can only contain letters, numbers, and underscores"
       x-ui-override-disable: true
-      x-ui-error-message: "Database name must start with a letter and contain only letters, numbers, and underscores."
       x-ui-placeholder: "e.g., ['myapp', 'analytics']"
       default: []
     db_schemas:
