k8s flag in helm

--- a/modules/helm/k8s/0.1/facets.yaml
+++ b/modules/helm/k8s/0.1/facets.yaml
@@ -7,6 +7,8 @@ clouds:
   - azure
   - gcp
   - kubernetes
+controlPlaneUISettings:
+  enableKubernetesExplorer: true
 spec:
   title: Helm
   description: Specification of the Helm chart intent
