Live Tab shows k8s dashboard

--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -20,6 +20,8 @@ metadata:
       type: string
       title: Namespace
       description: Namespace in which deployment should be deployed
+controlPlaneUISettings:
+  enableKubernetesExplorer: true
 spec:
   title: K8s flavor of service
   type: object
