--- a/modules/service/cronjob/0.1/facets.yaml
+++ b/modules/service/cronjob/0.1/facets.yaml
@@ -19,6 +19,8 @@ metadata:
       type: string
       title: Namespace
       description: Namespace in which cronjob should be deployed
+controlPlaneUISettings:
+  enableKubernetesExplorer: true
 spec:
   title: Cronjob flavor of service
   type: object
