--- a/modules/service/statefulset/0.1/facets.yaml
+++ b/modules/service/statefulset/0.1/facets.yaml
@@ -19,6 +19,8 @@ metadata:
       type: string
       title: Namespace
       description: Namespace in which statefulset should be deployed
+controlPlaneUISettings:
+  enableKubernetesExplorer: true
 spec:
   title: K8s flavor of service
   type: object
