updated openbao module to enable secret engine

--- a/modules/openbao/default/1.0/facets.yaml
+++ b/modules/openbao/default/1.0/facets.yaml
@@ -111,7 +111,7 @@ inputs:
     - kubernetes
 outputs:
   default:
-    type: '@outputs/openbao_cluster'
+    type: '@outputs/openbao'
     title: OpenBao Cluster
     description: OpenBao cluster connection information
 iac:
