sa.name should be req

--- a/modules/aws_iam_role/default/0.2/facets.yaml
+++ b/modules/aws_iam_role/default/0.2/facets.yaml
@@ -37,6 +37,8 @@ spec:
                   type: string
                   description: The namespace of the service account that you want
                     to attach the role to with the trust relationship
+              required:
+              - name
         oidc_providers:
           type: object
           title: OIDC Providers
