Added x-ui-image tag to get the image widget for attaching img

--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -986,6 +986,8 @@ spec:
               type: string
               title: Image
               description: Docker image of the init container.
+              x-ui-image:
+                artifact_type: docker_image
               x-ui-error-message: "Value doesn't match pattern for a container image"
             pull_policy:
               title: Image Pull Policy
@@ -1250,6 +1252,8 @@ spec:
               type: string
               title: Image
               description: Docker image of the init container
+              x-ui-image:
+                artifact_type: docker_image
               x-ui-error-message: "Value doesn't match pattern for a container image"
             pull_policy:
               title: Image Pull Policy
