--- a/modules/service/statefulset/0.1/facets.yaml
+++ b/modules/service/statefulset/0.1/facets.yaml
@@ -996,6 +996,8 @@ spec:
               type: string
               title: Image
               description: Docker image of the init container.
+              x-ui-image:
+                artifact_type: docker_image
               x-ui-error-message: Value doesn't match pattern for a container image
             pull_policy:
               title: Image Pull Policy
@@ -1258,6 +1260,8 @@ spec:
               type: string
               title: Image
               description: Docker image of the init container
+              x-ui-image:
+                artifact_type: docker_image
               x-ui-error-message: Value doesn't match pattern for a container image
             pull_policy:
               title: Image Pull Policy
