--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -986,6 +986,7 @@ spec:
               type: string
               title: Image
               description: Docker image of the init container.
+              x-ui-artifact: docker_image
               x-ui-error-message: "Value doesn't match pattern for a container image"
             pull_policy:
               title: Image Pull Policy
@@ -1250,6 +1251,7 @@ spec:
               type: string
               title: Image
               description: Docker image of the init container
+              x-ui-artifact: docker_image
               x-ui-error-message: "Value doesn't match pattern for a container image"
             pull_policy:
               title: Image Pull Policy
