--- a/modules/service/statefulset/0.1/facets.yaml
+++ b/modules/service/statefulset/0.1/facets.yaml
@@ -996,6 +996,7 @@ spec:
               type: string
               title: Image
               description: Docker image of the init container.
+              x-ui-artifact: docker_image
               x-ui-error-message: Value doesn't match pattern for a container image
             pull_policy:
               title: Image Pull Policy
@@ -1258,6 +1259,7 @@ spec:
               type: string
               title: Image
               description: Docker image of the init container
+              x-ui-artifact: docker_image
               x-ui-error-message: Value doesn't match pattern for a container image
             pull_policy:
               title: Image Pull Policy
