add required fields to mongo user
(cherry picked from commit ee02c5d01cf1d31d7e247c4de453ebd3db5b4fd3)

--- a/modules/mongo_user/default/0.3/facets.yaml
+++ b/modules/mongo_user/default/0.3/facets.yaml
@@ -67,6 +67,9 @@ spec:
               type: boolean
               title: Cluster
               description: Determines if permission should be at cluster level
+          required:
+          - permission
+          - cluster
     mongo_user:
       type: object
       title: Mongo User
@@ -106,6 +109,8 @@ spec:
               type: string
               title: Roles to Role
               description: The roles to role for the user
+  required:
+  - database
 sample:
   $schema: https://facets-cloud.github.io/facets-schemas/schemas/mongo_user/mongo_user.schema.json
   kind: mongo_user
