changes in the cloud account added aws3 provider as output

--- a/modules/cloud_account/aws/0.1/facets.yaml
+++ b/modules/cloud_account/aws/0.1/facets.yaml
@@ -47,6 +47,17 @@ outputs:
               role_arn: attributes.aws_iam_role
               session_name: attributes.session_name
               external_id: attributes.external_id
+      aws3:
+        source: hashicorp/aws3
+        version: "= 3.74.0"
+        attributes:
+          region: attributes.aws_region
+          skip_region_validation: true
+          attributes:
+            assume_role:
+              role_arn: attributes.aws_iam_role
+              session_name: attributes.session_name
+              external_id: attributes.external_id
 sample:
   version: "0.1"
   flavor: aws
