remove regular expression from facets.yaml

--- a/modules/ingress/nginx_gateway_fabric_legacy/1.0/facets.yaml
+++ b/modules/ingress/nginx_gateway_fabric_legacy/1.0/facets.yaml
@@ -272,11 +272,10 @@ spec:
             path_type:
               type: string
               title: Path Type
-              description: "Path matching type. PathPrefix (default) matches paths starting with the specified prefix. Use RegularExpression for regex matching (e.g., ^/api/v[0-9]+/.*). Use Exact for exact path matching."
+              description: "Path matching type. PathPrefix (default) matches paths starting with the specified prefix. Use Exact for exact path matching."
               enum:
               - Exact
               - PathPrefix
-              - RegularExpression
               default: PathPrefix
               x-ui-visible-if:
                 field: spec.rules.{{this}}.grpc_config.enabled
