--- a/modules/ingress/nginx_gateway_fabric_legacy/1.0/facets.yaml
+++ b/modules/ingress/nginx_gateway_fabric_legacy/1.0/facets.yaml
@@ -28,8 +28,8 @@ inputs:
     type: "@outputs/prometheus"
     optional: true
     default:
-      resource_type: prometheus
-      resource_name: default
+      resource_type: configuration
+      resource_name: prometheus
 outputs:
   default:
     type: "@outputs/ingress"
